Remove background color and use backgroung image instead, change font color

--- a/src/app/goal/goal.component.html
+++ b/src/app/goal/goal.component.html
@@ -1,4 +1,4 @@
-<div class="container" [ngStyle]="{'background-color':'cyan'}">
+<div class="container" [ngStyle]="{'background-color':'transparent'}">
   <h1 [ngStyle]="{'text-align':'center'}">My Goals</h1>
   <hr>
   <div class="row">
