--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,10 +4,11 @@
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  background-image: url("https://bit.ly/39yfhjd");
+  background-image: url("https://bit.ly/2wkOrOc");
   background-repeat: no-repeat;
   background-size: cover;
-  color: rgb(66, 62, 62);
+  color: white;
+  font-size: large;
   height: 800px;
   font-size: larger;
 }
